# openspeak

./: .gitignore  README.md  RELEASE.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  OverlayApp.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  audio.rs  command_parser.rs  commands.rs  config.rs  injector.rs  lib.rs  main.rs  model.rs  overlay.rs  transcription.rs  types.rs
src-tauri/src/platform/: macos.rs
src/lib/: tauri.ts  types.ts
