[package]
name = "openspeak"
version = "0.1.0"
description = "Local-first cross-platform dictation tool"
authors = ["tbalducci"]
edition = "2021"

[lib]
name = "openspeak_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "io-util"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
dirs = "5"
cpal = "0.15"
whisper-rs = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[patch.crates-io]
whisper-rs-sys = { path = "../vendor/whisper-rs-sys" }
